--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,8 @@ img {
 /* Header */
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -94,6 +96,7 @@ img {
 
 .header-logo .logo-part {
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-list {
@@ -110,7 +113,7 @@ img {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -149,7 +152,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link:hover,
@@ -170,6 +173,8 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -227,6 +232,7 @@ img {
   background: #f4f4fd;
   margin-bottom: 8px;
   max-width: 264px;
+  height: 112px;
 }
 
 .features-subtitle {
@@ -320,7 +326,7 @@ img {
 
 .team-link:hover,
 .team-link:focus {
-  background-color: #31d0aa;
+  background-color: #404bbf;
 }
 
 .social-icon {
@@ -348,7 +354,9 @@ img {
 .portfolio-item {
   background: #fff;
   width: calc((100% - 2 * 24px) / 3);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-image {
@@ -364,7 +372,7 @@ img {
   height: 100%;
   transform: translateY(100%);
   background-color: #4d5ae5;
-  padding: 40px 32px 164px;
+  padding: 40px 32px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -408,6 +416,7 @@ img {
 
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-logo {
@@ -439,7 +448,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .footer-social-list {
